Fix rendering of group layers with convolution-based layers styles

Basically, group layers and adjustment layers depend on children and
predecessors correspondingly. We should take care about that, because
layer styles can also depend on that...

BUG:390299